//声明协议版本
syntax = "proto3";

//声明分包名称
package person;

//设置 “包路径;别名”
option go_package = "03_Server/pb/person;person";


message PersonReq{
  string name = 1;
  int32 age = 2;
}

message PersonRes{
  string name = 1;
  int32 age = 2;
}

service TestService{
  //使用rpc声明时遵循格式为：rpc 方法名称(入参)returns(出参)
  //rpc声明的方法根据出入参是否为流分为四类
  //出入参不为流
  rpc TestFunc1(PersonReq)returns(PersonRes);
  //入参为流
  rpc TestFunc2(stream PersonReq)returns(PersonRes);
  //出参为流
  rpc TestFunc3(PersonReq)returns(stream PersonRes);
  //出入参为流
  rpc TestFunc4(stream PersonReq)returns(stream PersonRes);
}